[gd_scene load_steps=5 format=1]

[ext_resource path="res://scripts/playerScripts/health.gd" type="Script" id=1]
[ext_resource path="res://tilesets/SpriteSheet.atex" type="Texture" id=2]


[sub_resource type="StyleBoxFlat" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0, 0.926056, 0.996094, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="StyleBoxFlat" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.890625, 0.0661011, 0.0661011, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[node name="Health Canvas" type="CanvasLayer"]

editor/display_folded = true
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script/script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 9.0
margin/top = 10.0
margin/right = 49.0
margin/bottom = 50.0

[node name="ProgressBar" type="ProgressBar" parent="Control"]

rect/scale = Vector2( 0.25, 0.25 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -9.0
margin/top = -10.0
margin/right = 244.0
margin/bottom = 7.0
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 100.0
range/exp_edit = false
range/rounded = false
percent/visible = false
__meta__ = {
"_edit_group_": true
}

[node name="HealthOverlay" type="Sprite" parent="Control"]

transform/pos = Vector2( -13, -11.0078 )
texture = ExtResource( 2 )
centered = false
vframes = 20
hframes = 2
region = true
region_rect = Rect2( 20, 1, 68, 6 )

[node name="Extra Health1" type="Sprite" parent="Control"]

transform/pos = Vector2( 2, -16 )
texture = ExtResource( 2 )
vframes = 20
hframes = 20
region_rect = Rect2( 1, 1, 7, 7 )

[node name="Extra Health2" type="Sprite" parent="Control"]

transform/pos = Vector2( -6, -16 )
texture = ExtResource( 2 )
vframes = 20
hframes = 20
region_rect = Rect2( 1, 1, 7, 7 )

[node name="Extra Health3" type="Sprite" parent="Control"]

transform/pos = Vector2( 10, -16 )
texture = ExtResource( 2 )
vframes = 20
hframes = 20
region_rect = Rect2( 1, 1, 7, 7 )

[node name="Extra Health4" type="Sprite" parent="Control"]

transform/pos = Vector2( 18, -16 )
texture = ExtResource( 2 )
vframes = 20
hframes = 20
region_rect = Rect2( 1, 1, 7, 7 )

[node name="Extra Health5" type="Sprite" parent="Control"]

transform/pos = Vector2( 26, -16 )
texture = ExtResource( 2 )
vframes = 20
hframes = 20
region_rect = Rect2( 1, 1, 7, 7 )

[node name="Extra Health6" type="Sprite" parent="Control"]

transform/pos = Vector2( 34, -16 )
texture = ExtResource( 2 )
vframes = 20
hframes = 20
region_rect = Rect2( 1, 1, 7, 7 )

[node name="Extra Health7" type="Sprite" parent="Control"]

transform/pos = Vector2( 42, -16 )
texture = ExtResource( 2 )
vframes = 20
hframes = 20
region_rect = Rect2( 1, 1, 7, 7 )

[node name="Extra Health8" type="Sprite" parent="Control"]

transform/pos = Vector2( 50, -16 )
texture = ExtResource( 2 )
vframes = 20
hframes = 20
region_rect = Rect2( 1, 1, 7, 7 )


